<resources>
    <string name="app_name">Chef</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_menu">探索</string>
    <string name="title_like">收藏</string>
    <string name="title_user_order">訂單</string>
    <string name="title_chat">訊息</string>
    <string name="title_user_profile">個人</string>
    <string name="title_chef_order">訂單</string>
    <string name="title_calendar">日曆</string>
    <string name="title_transaction">交易</string>
    <string name="title_chef_profile">個人</string>
    <string name="map_api_key_name">com.google.android.geo.API_KEY</string>
    <string name="new_taiwan_dollar">NT$%1$s</string>
    <string name="new_taiwan_dollar_per_price">NT$%1$s /人</string>
    <string name="support_by">由 %1$s 提供</string>
    <string name="menu_created_by">%1$s 建立的菜單</string>
    <string name="people">%1$d 位</string>
    <string name="transaction_number">%1$d 筆</string>
    <string name="calendar_set_selected_dates_txt">已選定 %1$d 個日期</string>
    <string name="number_of_review">%1$d 則評價</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>