<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuFragment"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_menu"
        />

    <item
        android:id="@+id/likeFragment"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_like"
        />

    <item
        android:id="@+id/orderManageFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_user_order" />

    <item
        android:id="@+id/chatFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_chat" />

    <item
        android:id="@+id/userProfileFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_user_profile" />


</menu>