<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/orderManageFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_user_order" />
    <item
        android:id="@+id/chatFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_chat" />

    <item
        android:id="@+id/calendar"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_calendar" />

    <item
        android:id="@+id/transactionFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_transaction" />

    <item
        android:id="@+id/chefFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_chef_profile" />



</menu>